compiler/tests/fixtures/invalid/semantics/reaction_multiple_time_of_day.viv
// Invalid: reaction with multiple time-of-day constraints

reserved action respond:
    roles:
        @responder:
            as: initiator

action trigger:
    roles:
        @actor:
            as: initiator
    reactions:
        queue action respond:
            with:
                @responder: @actor
            time:
                after: 8am
                before: 6pm
